# 42_EXAM_04

./: CMakeLists.txt  README.md  subject.en.txt
srcs/: main.c  microshell.c  microshell.cpp  microshell.h
test/: CMakeLists.txt  Tmicroshell.cpp
test/srcs/: Tmicroshell.cpp
